deployment/k8sdeployments/kong/customization/porcelain-ingress.yml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: porcelain-ingress
  annotations:
    kubernetes.io/ingress.class: kong
    konghq.com/methods: GET,POST,PUT,DELETE,PATCH,OPTIONS
    configuration.konghq.com: porcelain-kongingress
    konghq.com/plugins: porcelain-kong-plugin
spec:
  tls:
   - secretName: porcelain-secret
  rules:
  - http:
      paths:
      - path: /v8/storage
        backend:
          serviceName: sdi-gateway-block
          servicePort: 8444
      - path: /v8/compute
        backend:
          serviceName: sdi-gateway-compute
          servicePort: 8444
      - path: /v8/network
        backend:
          serviceName: sdi-gateway-network
          servicePort: 8444
      - path: /v8/baremetal
        backend:
          serviceName: sdi-gateway-baremetal
          servicePort: 8444
      - path: /config
        backend:
          serviceName: sdi-gateway-block
          servicePort: 8444
      - path: /porcelain
        backend:
          serviceName: porcelain
          servicePort: 23015
      - path: /v2/tasks
        backend:
          serviceName: tasks
          servicePort: 23017
      - path: /idm
        backend:
          serviceName: idm
          servicePort: 23016
      - path: /
        backend:
          serviceName: sdi-gateway-block
          servicePort: 8444
